# eigen_mat

./: .gitignore  CMakeLists.txt  README.md  build.bat  guide.md  ifx_lib_linker.docx
allg/: CMakeLists.txt  allg.lib.txt  chlaen.f  clear.f  ddate.f  enter.f  getdat.f  getsyi.f  gettim.f  header.f  komaus.f  mnrlen.f  qlcase.f  qltrim.f  qrdrucke.f  qrtrim.f  qspace.f  qstlng.f  qtest.f  qucase.f  strgrb.f  timdat.f
cha/: CMakeLists.txt  cha.lib.txt  chatest.f  chlaen.f  cralpa.f  crchan.f  crdeli.f  crdigi.f  creos.f  crfind.f  criany.f  crint.f  crinte.f  crkw.f  crmsg.f  crnams.f  crprot.f  crreal.f  crsign.f  crspec.f  crwhat.f  crwrit.f  upcase.f
help/: CMakeLists.txt  f77.txt  hechanz.f  hechdot.f  hechs2.f  hechse.f  hechtyp.f  heclear.f  heclose.f  hecomm.f  hecorr.f  hedef.f  heedit.f  heenter.f  hefehl.f  hefimk.f  hefnag.f  hehread.f  heinch.f  heinit.f  heinou.f  heinqnm.f  heinqu.f  heinqun.f  heleer.f  heleint.f  helejn.f  helerea.f  helerz.f  heleze.f  help.lib.txt  helpus.f  heopen.f  hereach.f  heread.f  hestis.f  hetypcha.f  hetypdb.f  hetypdbe.f  hetypint.f  (+10 more)
matrix/arpack/: CMakeLists.txt
matrix/engeln-reutter/: CMakeLists.txt  balan.f  balbak.f  comabs.f  comdiv.f  dbnorm.f  eigen.f  eiwert.f  elmhes.f  elmtra.f  hqr2.f  mave.f  normal.f  qskal.f  quot.f  swap.f
matrix/lapack/: la_constants.mod  la_xisnan.mod
test/: CMakeLists.txt  eigenvalue.f  eigtst.f  main_eigtst.f  main_mistst.f  main_realeig_2.f  mistst.f  realeig_2.f  realeig_3.f  realeig_4.f
