add_library(eigen_help STATIC
    hechanz.f
    hechdot.f
    hechs2.f
    hechse.f
    hechtyp.f
    heclear.f
    heclose.f
    hecomm.f
    hecorr.f
    hedef.f
    heedit.f
    heenter.f
    hefehl.f
    hefimk.f
    hefnag.f
    hehread.f
    heinch.f
    heinit.f
    heinou.f
    heinqnm.f
    heinqu.f
    heinqun.f
    heleer.f
    heleint.f
    helejn.f
    helerea.f
    helerz.f
    heleze.f
    helpus.f
    heopen.f
    hereach.f
    heread.f
    hestis.f
    hetypcha.f
    hetypdb.f
    hetypdbe.f
    hetypint.f
    hetyprea.f
    hetypree.f
    hetypres.f
    hetyprex.f
    hetypria.f
    hewrite.f
    hinfomat.f
    hmaterr.f
    hreadmat.f
)
target_include_directories(eigen_help PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
